--- a/source/login.html
+++ b/source/login.html
@@ -14,13 +14,13 @@
     </style>
   </head>
   <body>
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color:rgba(0,117,94,0.75);">
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color:rgba(0, 133, 71, 0.75)">
       <div class="container-fluid">
         <a class="navbar-brand ms-3 fs-3 navtext" style="font-family:'M PLUS 1p', sans-serif;" href="/">
           <img id="logo" src="/source/images/mintdropLogo(PROTO).png" alt="" width="40" height="40" class="d-inline-block align-text-top">
           Mintdrop
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler me-5" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="container-fluid collapse navbar-collapse text-light justify-content-end" id="navbarNavDropdown">
