--- a/source/create_user.html
+++ b/source/create_user.html
@@ -9,7 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500&family=M+PLUS+1p:wght@400&family=Tajawal:wght@300;400&display=swap" rel="stylesheet">   
     <style>
-      body {font-family: 'Barlow', sans-serif;}
+      body {
+      font-family: 'Barlow', sans-serif;
+      font-size:1.4em;
+      }
       .navtext {font-weight: 500;}
     </style>
   </head>
@@ -17,11 +20,11 @@
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color:rgba(0, 133, 71, 0.75)">
       <div class="container-fluid">
         <a class="navbar-brand ms-3 fs-3 navtext" style="font-family:'M PLUS 1p', sans-serif;" href="/">
-          <img id="logo" src="/source/images/mintdropLogo(PROTO).png" alt="" width="40" height="40" class="d-inline-block align-text-top">
-          Mintdrop
+          <img id="logo" src="/source/images/mintdropLogo(PROTO).png" alt="" width="8rem" class="d-inline-block align-text-top ms-3 me-3" style="min-width: 6rem;">
+          <h1 class="d-inline-block align-text-top ms-3" style="margin-top: auto; margin-bottom: auto; line-height: 6rem; font-size: 1.7em;"> Mintdrop </h1>
         </a>
-        <button class="navbar-toggler me-5" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler me-5 btn-block" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="width: 5rem;">
+          <span class="navbar-toggler-icon" style="width: 3rem; height: 5rem;"></span>
         </button>
         <div class="container-fluid collapse navbar-collapse text-light justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
