--- a/source/create_user.html
+++ b/source/create_user.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>Mintdrop</title>
-    <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,14 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500&family=M+PLUS+1p:wght@400&family=Tajawal:wght@300;400&display=swap" rel="stylesheet">   
     <style>
       body {
-      font-family: 'Barlow', sans-serif;
-      font-size:1.4em;
+        font-family: 'Barlow', sans-serif;
+        font-size:1.4em;
       }
-      .navtext {font-weight: 500;}
+      .navtext {
+        font-weight: 500;
+      }
     </style>
   </head>
   <body>
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color:rgba(0, 133, 71, 0.75)">
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color:rgba(8, 150, 115, 0.75)">
       <div class="container-fluid">
         <a class="navbar-brand ms-3 fs-3 navtext" style="font-family:'M PLUS 1p', sans-serif;" href="/">
           <img id="logo" src="/source/images/mintdropLogo(PROTO).png" alt="" width="8rem" class="d-inline-block align-text-top ms-3 me-3" style="min-width: 6rem;">
@@ -55,24 +56,26 @@
         </div>
       </div>
     </nav>
-    <div class="mt-5" style="margin-left:20vw; margin-right:20vw;">
-      <form action="/create/user" method="post">
-        <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" name="email">
-          <div id="emailHelp" class="form-text">Your email will not be shared.</div>
-        </div>
-        <div class="mb-3">
-          <label for="username" class="form-label">Username</label>
-          <input type="text" class="form-control" name="username">
-        </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" name="password">
-          <div id="emailHelp" class="form-text">We'll never (intentionally) share your password with anyone else.</div>
-        </div>
-        <button type="submit" value="Submit" class="btn btn-outline-success">Create Account</button>
-      </form>
+    <div class="mt-5 container-fluid ms-3 me-3" style="margin-left:20rem; margin-right:20rem;">
+      <div class="container d-flex justify-content-center">
+        <form action="/create/user" method="post">
+          <div class="mb-3">
+            <label for="email" class="form-label">Email address</label>
+            <input type="email" class="form-control" name="email">
+            <div id="emailHelp" class="form-text">Your email will not be shared.</div>
+          </div>
+          <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" class="form-control" name="username">
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" name="password">
+            <div id="emailHelp" class="form-text">We'll never (intentionally) share your password with anyone else.</div>
+          </div>
+          <button type="submit" value="Submit" class="btn btn-outline-success">Create Account</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
