--- a/source/index.html
+++ b/source/index.html
@@ -32,18 +32,20 @@
         <button class="navbar-toggler me-5 btn-block" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="width: 5rem;">
           <span class="navbar-toggler-icon" style="width: 3rem; height: 3rem;"></span>
         </button>
-        <div class="container-fluid d-flex flex-wrap flex-start" style="margin-left: 5vw;" action="search">
-          <form class="d-flex" style="width:40rem; height:2.75rem;">
-            <input class="form-control me-2" type="search" placeholder="Search items, collections, and users" aria-label="Search">
-            <button class="btn btn-light btn-outline-dark" type="submit">Search</button>
-          </form>
-        </div>
-        <div class="container-fluid collapse navbar-collapse text-light justify-content-center" id="navbarNavDropdown" style="max-width: fit-content;">
+        <div class="container-fluid collapse navbar-collapse text-light justify-content-center" id="navbarNavDropdown" style="max-width: fit-content; line-height: 4rem;">
           <ul class="navbar-nav">
-            <li class="nav-item ms-4 me-4">
+            <form class="form-inline my-lg-0 d-flex align-items-center px-3" style="width: 25vw;">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <div class="input-group-text">Search</div>
+                </div>
+                <input class="form-control mr-sm-2" type="search" placeholder="Items, collections, users">
+              </div>
+            </form>
+            <li class="nav-item px-3">
               <a class="nav-link navtext" href="/collections" >Collections</a>
             </li>
-            <li class="nav-item dropdown ms-4 me-4">
+            <li class="nav-item dropdown px-3">
               <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 About
               </a>
@@ -52,9 +54,9 @@
                 <li><a class="dropdown-item droptext" href="/about/creators">Creators</a></li>
               </ul>
             </li>
-            <li class="nav-item dropdown ms-4 me-4">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                My Account
+                Account
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item droptext" href="/create/user">Sign Up</a></li>
