--- a/source/create_user.html
+++ b/source/create_user.html
@@ -27,8 +27,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:rgba(8, 150, 115, 0.75)">
       <div class="container-fluid">
         <a class="navbar-brand ms-3 fs-3 navtext" style="font-family:'M PLUS 1p', sans-serif;" href="/">
-          <img id="logo" src="/source/images/mintdropLogo(PROTO).png" alt="" width="8rem" class="d-inline-block align-text-top ms-3 me-3" style="min-width: 4rem;">
-          <h1 class="d-inline-block align-text-top ms-3" style="margin-top: auto; margin-bottom: auto; line-height: 4rem; font-size: 1.5em;"> Mintdrop </h1>
+          <img id="logo" src="/source/images/mintdropLogo(PROTO).png" alt="" width="8rem" class="d-inline-block align-text-top mx-2" style="min-width: 4rem;">
+          <h1 class="d-inline-block align-text-top" style="margin-top: auto; margin-bottom: auto; line-height: 4rem; font-size: 1.5em;"> Mintdrop </h1>
         </a>
         <button class="navbar-toggler me-5 btn-block" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="width: 5rem;">
           <span class="navbar-toggler-icon"></span>
