added users section and streamlined the navbar

--- a/source/create_user.html
+++ b/source/create_user.html
@@ -23,8 +23,14 @@
         </button>
         <div class="container-fluid collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav mr-auto mx-4">
-            <li class="nav-item mx-4">
-              <a class="nav-link navtext" href="/collections">Collections</a>
+            <li class="nav-item dropdown mx-4">
+              <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Explore
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item droptext" href="/collections">Collections</a></li>
+                <li><a class="dropdown-item droptext" href="/users">Users</a></li>
+              </ul>
             </li>
             <li class="nav-item dropdown mx-4">
               <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -35,19 +41,6 @@
                 <li><a class="dropdown-item droptext" href="/about/creators">Creators</a></li>
               </ul>
             </li>
-            {{#if loggedIn}}
-            <li class="nav-item dropdown mx-4">
-              <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Account
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item droptext" href="/trades">Trades</a></li>
-                <li><a class="dropdown-item droptext" href="/inventory">Inventory</a></li>
-                <li><a class="dropdown-item droptext" href="/profile">Profile</a></li>
-                <li><a class="dropdown-item droptext" href="/logout">Logout</a></li>
-              </ul>
-            </li>
-            {{else}}
             <li class="nav-item dropdown mx-4">
               <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Account
@@ -57,7 +50,6 @@
                 <li><a class="dropdown-item droptext" href="/login">Login</a></li>
               </ul>
             </li>
-            {{/if}}
           </ul>
           <form action="/search" method="post" class="form-inline my-2 my-lg-0 d-flex flex-nowrap" style="margin-left: auto;">
             <input class="form-control mr-sm-2 ms-5" name="search" type="search" placeholder="Search" aria-label="Search">
